feat: add swagger config and docs for create user endpoint
