# docs/swagger_types.go
@@ -1,0 +1,5 @@
+package docs
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"Something went wrong"`
+}
